--- a/trunk/chkiearea/CForm.resx
+++ b/trunk/chkiearea/CForm.resx
@@ -199,49 +199,67 @@
   <data name="bBrowserFlags.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAjpJREFUOE+l019M
-        UlEcB3BtbW3VY+uhZ31o1UOuP1trq+GGm4oXCFNbrdaImbVUjOylLrgV6w+TUmetSYpS64/pUNuKChlW
-        JgbmnySWmFGAyB+ByyXA9u3SUw8XbXW283LO+X3O+Z7tl53FDJI0rj50JKdg5puX+OKa3xyJ0hu9weD6
-        dWvWfsrNzVMf42/Vp89lHM9MNnlLe+9YT89w3GD5CMOkE7f0ZpxT6yAUk/7S08rDGYvLT13ZpNb0vntp
-        NP30UTTcdALOCA2rj4J+8jvkmgFwi+uTXFFtDitiMFs1d3v7o66FRVDJFMKJFHyxJKYDMRhnw+iyuFF5
-        SYO9wuoGVqC5XT/1dMjGFCUQTS6BSi0hSKfgCNAwORfxwObHBe0gdgtqQqxAraIVQw4XnOE4Fugkgj9S
-        cEcTmJin8OpzCLoRDxrujWKfSApWQN7YMdP14j1GvRSmgzQcoTjGmfyvv0bQN+VHm9kFafMAdhVVWVkB
-        UtWprW7sjj+fjcA0F2VmBAbm6Xp7AJ0WD5TdEyiruwnBUQnFCkjI2xsE4obwtUcmPPzgx5PxIO4zuTVv
-        Pbiqt+O4ogOcg1LomsTsEdLqgZOXubwKReyEog0XtUbm1jHUtfSjQtaE/aIzuCEnELIrV0AqldvPqx7f
-        4ZTKhncW1kTzy+tRVnV9rrC4QMbZsQ1vWresjLBkzE6v8fg8IcHn/TPy2/0vhCSzVv2J9KnycFaSn/lT
-        l2s8giD2EARvpKSkSLBsh/7t5i+YSHH9KwrlZgAAAABJRU5ErkJggg==
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAjtJREFUOE+l019I
+        U1EcB3CNIKgeo4ee9SGqh6Q/EEExYYI677ZmahRFrGEWqbNlL3W3QY3+DFcqFuHy34r+mGNqUKvmmJU5
+        28w/aSNnttp07o/bvd61zfh211MPdxp14Lycc36fc74HfpkZ7CBJy+pDR7Lypr7NEl88c5ujFLNxNhRa
+        v27N2k/Z2Tm6Y8KtptS5tOOZ1alsbDEOd3UNxMz2jzCPuXHLZMM5nQFiKRkoPq05nLa49NSVTTq98d1L
+        i+Wnn2bgZeJwRxk4/DRMY9+h1PeCX1ib4EuqszgRs82hv2vsoTzzC6ATSUTiSfgXE5gILsIyHUGH3Yvy
+        S3rsFVeqOYGGFtP4034nWxQHlVgCnVxCiEnCFWRgdS/ggTOAC2192C2qCnMC1aom9Ls8cEdimGcSCP1I
+        wkvFMTpH49XnMAyDPqjvDWGfRA5OQFnXOtXx4j2GZmlMhBi4wjGMsPlff42iezyAZpsH8oZe7CqocHAC
+        pLa9rbKuM/Z8OgrrDMXOKMzs002TQbTbfdB0jqKk5iZER2U0JyAjb28QSdWRa4+sePghgCcjIdxnc+vf
+        +nDVNInjqlbwDsphqJdyR0ipB05e5gvKVIsnVM242GZhbx1GTWMPyhT12C85gxtKAuFJzQpIuWb7ee3j
+        O7xixcDO/Coqt7QWJRXXZ/IL8xS8HdvwpmnLyghHxszUmkAoEBNCwT8jv93/QkgyY9WfSLc2B2dluek/
+        dbnGIwhiD0EIBouKCkTLdujfbv4CkUJx+xAUmnEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bMIME.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAjpJREFUOE+l019M
-        UlEcB3BtbW3VY+uhZ31o1UOuP1trq+GGm4oXCFNbrdaImbVUjOylLrgV6w+TUmetSYpS64/pUNuKChlW
-        JgbmnySWmFGAyB+ByyXA9u3SUw8XbXW283LO+X3O+Z7tl53FDJI0rj50JKdg5puX+OKa3xyJ0hu9weD6
-        dWvWfsrNzVMf42/Vp89lHM9MNnlLe+9YT89w3GD5CMOkE7f0ZpxT6yAUk/7S08rDGYvLT13ZpNb0vntp
-        NP30UTTcdALOCA2rj4J+8jvkmgFwi+uTXFFtDitiMFs1d3v7o66FRVDJFMKJFHyxJKYDMRhnw+iyuFF5
-        SYO9wuoGVqC5XT/1dMjGFCUQTS6BSi0hSKfgCNAwORfxwObHBe0gdgtqQqxAraIVQw4XnOE4Fugkgj9S
-        cEcTmJin8OpzCLoRDxrujWKfSApWQN7YMdP14j1GvRSmgzQcoTjGmfyvv0bQN+VHm9kFafMAdhVVWVkB
-        UtWprW7sjj+fjcA0F2VmBAbm6Xp7AJ0WD5TdEyiruwnBUQnFCkjI2xsE4obwtUcmPPzgx5PxIO4zuTVv
-        Pbiqt+O4ogOcg1LomsTsEdLqgZOXubwKReyEog0XtUbm1jHUtfSjQtaE/aIzuCEnELIrV0AqldvPqx7f
-        4ZTKhncW1kTzy+tRVnV9rrC4QMbZsQ1vWresjLBkzE6v8fg8IcHn/TPy2/0vhCSzVv2J9KnycFaSn/lT
-        l2s8giD2EARvpKSkSLBsh/7t5i+YSHH9KwrlZgAAAABJRU5ErkJggg==
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAjtJREFUOE+l019I
+        U1EcB3CNIKgeo4ee9SGqh6Q/EEExYYI677ZmahRFrGEWqbNlL3W3QY3+DFcqFuHy34r+mGNqUKvmmJU5
+        28w/aSNnttp07o/bvd61zfh211MPdxp14Lycc36fc74HfpkZ7CBJy+pDR7Lypr7NEl88c5ujFLNxNhRa
+        v27N2k/Z2Tm6Y8KtptS5tOOZ1alsbDEOd3UNxMz2jzCPuXHLZMM5nQFiKRkoPq05nLa49NSVTTq98d1L
+        i+Wnn2bgZeJwRxk4/DRMY9+h1PeCX1ib4EuqszgRs82hv2vsoTzzC6ATSUTiSfgXE5gILsIyHUGH3Yvy
+        S3rsFVeqOYGGFtP4034nWxQHlVgCnVxCiEnCFWRgdS/ggTOAC2192C2qCnMC1aom9Ls8cEdimGcSCP1I
+        wkvFMTpH49XnMAyDPqjvDWGfRA5OQFnXOtXx4j2GZmlMhBi4wjGMsPlff42iezyAZpsH8oZe7CqocHAC
+        pLa9rbKuM/Z8OgrrDMXOKMzs002TQbTbfdB0jqKk5iZER2U0JyAjb28QSdWRa4+sePghgCcjIdxnc+vf
+        +nDVNInjqlbwDsphqJdyR0ipB05e5gvKVIsnVM242GZhbx1GTWMPyhT12C85gxtKAuFJzQpIuWb7ee3j
+        O7xixcDO/Coqt7QWJRXXZ/IL8xS8HdvwpmnLyghHxszUmkAoEBNCwT8jv93/QkgyY9WfSLc2B2dluek/
+        dbnGIwhiD0EIBouKCkTLdujfbv4CkUJx+xAUmnEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bMIMEefp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAjpJREFUOE+l019M
-        UlEcB3BtbW3VY+uhZ31o1UOuP1trq+GGm4oXCFNbrdaMmbVUjOylLrAV6w+TUmetSYpS64/JUNuKChlW
-        JgbmnySWmFGICBeByyXA9u3aUw9XbXW283LO+X3O+Z7tl5nBDpK0rD50JCtv8puf+OKd3RyNMRv9FLV+
-        3Zq1n7Kzc7THhFtNi+eWHM+sTkVTq3G4q2sgYbZ/hHnMg1smG85pDRCXk8Hi0+rDSxaXnrqySaszvntp
-        6fsZoBn4mCQ8UQaOAA3T2HcodL3gF9al+JKaLE7EbHPo7hp7Yt65edCpNCLJNALxFCZCcVimIuiw+1Bx
-        SYe94ioVJ9DYahp/2u9ki5KIpRZApxdAMWm4Qwysnnk8cAZxQd+H3aLqMCdQo2xGv9sLTySBOSYF6kca
-        vlgSo7M0Xn0OwzA4A9W9IeyTyMAJKOrbJjtevMeQn8YExcAdTmCEzf/6axTd40G02LyQNfZiV0GlgxMg
-        Ne36qvrOxPOpKKzTMXZGYWafbnKF0G6fgbpzFCW1NyE6KqU5ASl5e4OoXBW59siKhx+CeDJC4T6bW/d2
-        BldNLhxXtoF3UAZDQzl3hEX1wMnLfEGZMn5C2YKLegt76zBqm3pQJm/AfskZ3FAQCLvUKyAV6u3nNY/v
-        8IrlAzvzq2O5pXUoqbw+nV+YJ+ft2IY3zVtWRjgyZi6uCYQCMSEU/DPy2/0vhCQzVv2JdGtycFaau/Sn
-        Ltd4BEHsIQjBYFFRgWjZDv3bzV+UxXH8MN/ZTQAAAABJRU5ErkJggg==
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAjtJREFUOE+l019I
+        U1EcB3CNIKgeo4ee9SGqh6Q/EEExYYI677ZmahRFrGEWqbNlL3W3QY3+DFcqFuHy34r+mGNqUKvmmJU5
+        28w/aSNnttp07o/bvd61zfh211MPdxp14Lycc36fc74HfpkZ7CBJy+pDR7Lypr7NEl88c5ujFLNxNhRa
+        v27N2k/Z2Tm6Y8KtptS5tOOZ1alsbDEOd3UNxMz2jzCPuXHLZMM5nQFiKRkoPq05nLa49NSVTTq98d1L
+        i+Wnn2bgZeJwRxk4/DRMY9+h1PeCX1ib4EuqszgRs82hv2vsoTzzC6ATSUTiSfgXE5gILsIyHUGH3Yvy
+        S3rsFVeqOYGGFtP4034nWxQHlVgCnVxCiEnCFWRgdS/ggTOAC2192C2qCnMC1aom9Ls8cEdimGcSCP1I
+        wkvFMTpH49XnMAyDPqjvDWGfRA5OQFnXOtXx4j2GZmlMhBi4wjGMsPlff42iezyAZpsH8oZe7CqocHAC
+        pLa9rbKuM/Z8OgrrDMXOKMzs002TQbTbfdB0jqKk5iZER2U0JyAjb28QSdWRa4+sePghgCcjIdxnc+vf
+        +nDVNInjqlbwDsphqJdyR0ipB05e5gvKVIsnVM242GZhbx1GTWMPyhT12C85gxtKAuFJzQpIuWb7ee3j
+        O7xixcDO/Coqt7QWJRXXZ/IL8xS8HdvwpmnLyghHxszUmkAoEBNCwT8jv93/QkgyY9WfSLc2B2dluek/
+        dbnGIwhiD0EIBouKCkTLdujfbv4CkUJx+xAUmnEAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="toolStrip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>218, 17</value>
+  </metadata>
+  <data name="bRestart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAgxJREFUOE+lkvtL
+        U2EYx+0PEbtpFwnBKPGKiJImGP0gYhIYs1E5GF5gIxkpA00JRSmMEF0ohMh+GaRWYlqabMVcNdS2QpaI
+        VqiDIYhk397vA6fXhCjyhYdzeM/5fp7vczkAdeL2cwho7v/wWzT1zcN+Pwhr51uY2/y41PQaF+wzKKiZ
+        QvaN58g0jyLd5KEUcQbg+84P/Cm2tncQjW3j68YWIqubCC3FcOJc478BAuGoZM6zvoRnakXEruEIjhc4
+        /g5gZop9c+voGAyLbQIfeBZxLL9BA1jzXvuGbWamuKh+GmmVbswE19A59FEBbmoAG7YbsLtm2mZmiml9
+        cvabNDwpz6YB7LYBoMXCumkJr7LOmnnHzBQ/9X2Bo2cOibm1GsBREbAQiYmw/8lnuCeWkVzcgnZlnw1j
+        3HV/wuNXK6i/9x5Hc6wawDlTXHbLJ+LZUBQPRyKwdQdxutwl1h+NLXHh5Ht1ewBHsiwawCW57HyDAfWR
+        dvl0uhZQ1eqX8aVc7EKLqrum651ATLf9OJx5XQM4KmY0xPzZ0hFAiQJnXB0WwME0E3IsL5B17ZlADqWb
+        NYDrOepdlcysmTWWOrxqbceRWtaLk0VO1XW72D5Vckd2gMBfq8zdpmUG62NJvKM4+XyziDk24xmfWoGE
+        s1c0gHPmbrPTpHNJKOCo2G1mZs20zcwUJ5yp1AB5+8/zEwgF5GMVDxh4AAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
