--- a/chkiearea/Properties/Resources.resx
+++ b/chkiearea/Properties/Resources.resx
@@ -142,4 +142,10 @@
   <data name="DeleteFolderHS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\deletefolderhs.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MultiView_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MultiView_16x.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MultiplePagesHS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MultiplePagesHS.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
